@@ -49,10 +49,11 @@ import org.mockito.internal.stubbing.answers.CallsRealMethods;
 
 import java.time.Duration;
 import java.util.AbstractMap;
-import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
@@ -82,10 +83,10 @@ public class KafkaShareConsumerMetricsTest {
     public void testPollTimeMetrics() {
         ShareConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
-        consumer.subscribe(Collections.singletonList(topic));
+        consumer.subscribe(Set.of(topic));
         // MetricName objects to check
         Metrics metrics = consumer.metricsRegistry();
         MetricName lastPollSecondsAgoName = metrics.metricName("last-poll-seconds-ago", CONSUMER_SHARE_METRIC_GROUP_PREFIX + "-metrics");
@@ -127,7 +128,7 @@ public class KafkaShareConsumerMetricsTest {
     public void testPollIdleRatio() {
         ShareConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
         // MetricName object to check
@@ -165,7 +166,7 @@ public class KafkaShareConsumerMetricsTest {
     }
 
     private static boolean consumerMetricPresent(KafkaShareConsumer<String, String> consumer, String name) {
-        MetricName metricName = new MetricName(name, CONSUMER_SHARE_METRIC_GROUP_PREFIX + "-metrics", "", Collections.emptyMap());
+        MetricName metricName = new MetricName(name, CONSUMER_SHARE_METRIC_GROUP_PREFIX + "-metrics", "", Map.of());
         return consumer.metricsRegistry().metrics().containsKey(metricName);
     }
 
@@ -174,10 +175,10 @@ public class KafkaShareConsumerMetricsTest {
         Time time = new MockTime(1L);
         ShareConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
-        consumer.subscribe(Collections.singletonList(topic));
+        consumer.subscribe(List.of(topic));
         assertTrue(consumerMetricPresent(consumer, "last-poll-seconds-ago"));
         assertTrue(consumerMetricPresent(consumer, "time-between-poll-avg"));
         assertTrue(consumerMetricPresent(consumer, "time-between-poll-max"));
@@ -192,7 +193,7 @@ public class KafkaShareConsumerMetricsTest {
         Time time = new MockTime(1L);
         ShareConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
         Map<MetricName, KafkaMetric> customMetrics = customMetrics();
@@ -209,7 +210,7 @@ public class KafkaShareConsumerMetricsTest {
             Time time = new MockTime(1L);
             ShareConsumerMetadata metadata = createMetadata(subscription);
             MockClient client = new MockClient(time, metadata);
-            initMetadata(client, Collections.singletonMap(topic, 1));
+            initMetadata(client, Map.of(topic, 1));
 
             KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
             KafkaMetric existingMetricToAdd = (KafkaMetric) consumer.metrics().entrySet().iterator().next().getValue();
@@ -226,7 +227,7 @@ public class KafkaShareConsumerMetricsTest {
             Time time = new MockTime(1L);
             ShareConsumerMetadata metadata = createMetadata(subscription);
             MockClient client = new MockClient(time, metadata);
-            initMetadata(client, Collections.singletonMap(topic, 1));
+            initMetadata(client, Map.of(topic, 1));
 
             KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
             KafkaMetric existingMetricToRemove = (KafkaMetric) consumer.metrics().entrySet().iterator().next().getValue();
@@ -246,7 +247,7 @@ public class KafkaShareConsumerMetricsTest {
             Time time = new MockTime(1L);
             ShareConsumerMetadata metadata = createMetadata(subscription);
             MockClient client = new MockClient(time, metadata);
-            initMetadata(client, Collections.singletonMap(topic, 1));
+            initMetadata(client, Map.of(topic, 1));
 
             KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
 
@@ -267,7 +268,7 @@ public class KafkaShareConsumerMetricsTest {
             Time time = new MockTime(1L);
             ShareConsumerMetadata metadata = createMetadata(subscription);
             MockClient client = new MockClient(time, metadata);
-            initMetadata(client, Collections.singletonMap(topic, 1));
+            initMetadata(client, Map.of(topic, 1));
 
             KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
 
@@ -282,7 +283,7 @@ public class KafkaShareConsumerMetricsTest {
         Time time = new MockTime(1L);
         ShareConsumerMetadata metadata = createMetadata(subscription);
         MockClient client = new MockClient(time, metadata);
-        initMetadata(client, Collections.singletonMap(topic, 1));
+        initMetadata(client, Map.of(topic, 1));
 
         KafkaShareConsumer<String, String> consumer = newShareConsumer(time, client, subscription, metadata);
 
